--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,15 @@ a {
     color: inherit;
 }
 
+h2 {
+    text-transform: uppercase;
+}
+
+section {
+    margin-top: 3rem;
+    text-align: center;
+}
+
 /* HEADER */
 header {
     height: 80px;
@@ -15,7 +24,6 @@ header {
     color: white;
     text-transform: uppercase;
     line-height: 80px;
-    text-align: center;
 }
 
 .text-menu li {
@@ -23,8 +31,55 @@ header {
     padding-left: .7rem;
 }
 
+.text-menu {
+    display: none;
+}
+
+.burger-menu {
+    text-align: right;
+    padding-right: 1rem;
+}
+
+@media (min-width: 768px) {
+    header {
+        text-align: center;
+    }
+
+    .text-menu {
+        display: block;
+    }
+
+    .burger-menu {
+        display: none;
+    }
+}
+
 /* MAIN */
+
+/* Banner */
 .banner {
-    height: 200px;
     background-color: #19bc9d;
+    padding-top: 2rem;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.first-img {
+    width: 60px;
+    height: 60px;
+    background-color: cornsilk;
+    margin: 0 auto;
+}
+
+
+/* Portfolio */
+
+/* About */
+.about {
+    background-color: #19bc9d;
+}
+
+.ms_container {
+    width: 70%;
+    margin: 0 auto;
 }
