--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,30 @@ header {
     width: 70%;
     margin: 0 auto;
 }
+
+/* Contact */
+.line {
+    width: 100%;
+    border: 1px solid lightgray;
+}
+
+.contact li {
+    text-align: start;
+    padding: .5rem 0;
+}
+
+
+/* FOOTER */
+.footer-top {
+    background-color: #3a546d;
+}
+
+.ms_container-2 {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.footer-bottom {
+    background-color: #2c3e51;
+    height: 50px;
+}
