--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ a {
     color: inherit;
 }
 
-h2 {
+h1, h2, h3 {
     text-transform: uppercase;
 }
 
@@ -62,6 +62,7 @@ header {
     padding-top: 2rem;
     margin: 0 auto;
     text-align: center;
+    color: white;
 }
 
 .first-img {
@@ -77,6 +78,7 @@ header {
 /* About */
 .about {
     background-color: #19bc9d;
+    color: white;
 }
 
 .ms_container {
@@ -97,6 +99,11 @@ header {
 
 
 /* FOOTER */
+footer {
+    color: white;
+    text-align: center;
+}
+
 .footer-top {
     background-color: #3a546d;
 }
@@ -104,6 +111,26 @@ header {
 .ms_container-2 {
     width: 80%;
     margin: 0 auto;
+}
+
+h3 {
+    font-size: 1rem;
+}
+
+.footer-top ul {
+    text-align: center;
+    padding-left: 0;
+}
+
+.footer-top li {
+    display: inline-block;
+    margin-left: .5rem;
+    width: 35px;
+    height: 35px;
+    border: 1px solid white;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 35px;
 }
 
 .footer-bottom {
