--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 /* COMMON */
+html {
+    font-size: 100%;
+}
+
+img {
+    width: 100%;
+}
+
 ul {
     list-style: none;
 }
@@ -8,13 +16,40 @@ a {
     color: inherit;
 }
 
+a:hover {
+    color: #19bc9d;
+}
+
 h1, h2, h3 {
     text-transform: uppercase;
+    font-weight: 500;
 }
 
 section {
     margin-top: 3rem;
     text-align: center;
+}
+
+.star-decoration {
+    padding: .5rem 0;
+}
+
+.line {
+    display: inline-block;
+    width: 90px;
+    border: 1px solid white;
+    border-radius: 1px;
+    vertical-align: middle;
+}
+
+.line-dark {
+    border: 1px solid #2c3e51;
+}
+
+.star {
+    padding: 0 1rem;
+    font-size: 1.2rem;
+    vertical-align: middle;
 }
 
 /* HEADER */
@@ -24,6 +59,11 @@ header {
     color: white;
     text-transform: uppercase;
     line-height: 80px;
+}
+
+.header-title > p {
+    font-weight: bold;
+    font-size: 1.3rem;
 }
 
 .text-menu li {
@@ -66,12 +106,16 @@ header {
 }
 
 .first-img {
-    width: 60px;
-    height: 60px;
-    background-color: cornsilk;
+    width: 180px;
     margin: 0 auto;
+    padding-bottom: .4rem;
 }
 
+.banner p {
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    padding-bottom: 2rem;
+}
 
 /* Portfolio */
 
@@ -87,11 +131,6 @@ header {
 }
 
 /* Contact */
-.line {
-    width: 100%;
-    border: 1px solid lightgray;
-}
-
 .contact li {
     text-align: start;
     padding: .5rem 0;
@@ -106,6 +145,7 @@ footer {
 
 .footer-top {
     background-color: #3a546d;
+    padding: 2.5rem 0;
 }
 
 .ms_container-2 {
@@ -113,8 +153,8 @@ footer {
     margin: 0 auto;
 }
 
-h3 {
-    font-size: 1rem;
+.footer-top h3, p {
+    font-size: .9rem;
 }
 
 .footer-top ul {
@@ -135,5 +175,9 @@ h3 {
 
 .footer-bottom {
     background-color: #2c3e51;
-    height: 50px;
+}
+
+.footer-bottom > p {
+    padding: 2rem;
+    font-size: .7rem;
 }
