--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,33 @@ header {
 }
 
 /* Portfolio */
+.ms_img-container{
+    position: relative;
+}
+
+.ms_img-container > img {
+    display: block;
+}
+
+.ms_img-container .after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(25, 188, 157, .5);
+    color: white;
+    font-size: 3rem;
+    border-radius: 3px;
+}
+
+.ms_img-container:hover .after {
+    display: flex;
+}
+
 
 /* About */
 .about {
@@ -138,9 +165,21 @@ header {
 }
 
 /* Contact */
-.contact li {
+.ms_form {
     text-align: start;
-    padding: .5rem 0;
+}
+
+.ms_input, .ms_text-area {
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-radius: 0;
+    padding: 0;
+}
+
+.ms_btn {
+    background-color: #19bc9d;
+    color: white;
 }
 
 
